--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
    
     <div class="segundo"> 
       <p data-aos="fade-up"> TE ESPERO PARA CELEBRAR <br> MI BAUTISMO<br><br>
-        📅 20 DE DICIEMBRE <br>⏰ A LAS 15:30 HS <br> 📍IGLESIA NUESTRA SEÑORA DE LOURDES <br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
+        SÁBADO <br>
+        📅 20 DE DICIEMBRE <br>⏰ A LAS 15:00 HS <br> 📍IGLESIA NUESTRA SEÑORA DE LOURDES <br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
       <a  data-aos="fade-up" class="boton2" target="_blank"  href="maps.app.goo.gl/s5swSVAh4JUBeofe8?g_st=iw">CÓMO LLEGAR</a>    <br><br>
        <p data-aos="fade-up"> AL DÍA SIGUIENTE FESTEJAREMOS <br> MI PRIMER AÑITO<br><br>
+         DOMINGO <br>
         📅 21 DE DICIEMBRE <br>⏰ A LAS 19 HS <br> 📍SALÓN "ESPACIO ALTERNATIVA" <br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
       <a  data-aos="fade-up" class="boton2" target="_blank"  href="https://www.google.com/maps?q=Espacio+Alternativa,+Rodolfo+L%C3%B3pez+402,+B1878+Quilmes,+Provincia+de+Buenos+Aires&ftid=0x95a32fdaf156c7d3:0xde9c48cb3f5d34d2&entry=gps&lucs=,94284490,94224825,94227247,94227248,94231188,94280568,47071704,47069508,94218641,94282134,94203019,47084304&g_ep=CAISEjI1LjM1LjAuNzk5MDg4MzU1MBgAIIgnKmwsOTQyODQ0OTAsOTQyMjQ4MjUsOTQyMjcyNDcsOTQyMjcyNDgsOTQyMzExODgsOTQyODA1NjgsNDcwNzE3MDQsNDcwNjk1MDgsOTQyMTg2NDEsOTQyODIxMzQsOTQyMDMwMTksNDcwODQzMDRCAkFS&skid=ab5d5c9e-717c-4559-a4f4-eb2d8499b3d3&g_st=iw">CÓMO LLEGAR</a>    
   </div>
-  <div class="galeria2">
-    <img class="f1" src="./img/2.png" alt="foto">
-    <img class="f1" src="./img/3.png" alt="foto">
-    <img class="f1" src="./img/4.png" alt="foto">
-    <img class="f1" src="./img/5.png" alt="foto">
-  </div>
+   <div class="galeria">
+      <img class="f1" src="./img/2.png" alt="foto">
+      <img class="f2" src="./img/2.png" alt="foto">
+      <img class="f3" src="./img/2.png" alt="foto">
+      <img class="f4" src="./img/2.png" alt="foto">
+    </div>
+
       <main>
         <!--
           <div class="main-bloque">
@@ -72,10 +75,10 @@
           </div>
   </main>
   <div class="galeria">
-    <img class="f1" src="./img/6.png" alt="foto">
-    <img class="f2" src="./img/6.png" alt="foto">
-    <img class="f3" src="./img/6.png" alt="foto">
-    <img class="f4" src="./img/6.png" alt="foto">
+    <img class="f1" src="./img/3.png" alt="foto">
+    <img class="f2" src="./img/3.png" alt="foto">
+    <img class="f3" src="./img/3.png" alt="foto">
+    <img class="f4" src="./img/3.png" alt="foto">
   </div>
   
       <div class="end">
